[package]
name = "agy-acp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ACP stdio adapter for Google Antigravity CLI (agy)"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4.3"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
