[package]
name = "agy-acp"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "ACP stdio adapter for Google Antigravity CLI (agy)"

[dependencies]
clap = { version = "4", features = ["derive"] }
fs2 = "0.4.3"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
uuid = { version = "1", features = ["v4"] }
